# BlockKit

./: .aiignore  .gitignore  CONTRIBUTING.md  pytest.ini
.github/workflows/: publish.yml
.junie/: guidelines.md
corelab_blockkit/: __init__.py  list.py  meta.py
examples/: minimal.py
examples/plugin_example/: README.md  pyproject.toml
examples/plugin_example/blockkit_plugin_example/: __init__.py
tests/: test_base_block.py  test_blocks.py  test_list.py  test_registry.py  test_serialization.py  test_serialization_edge_cases.py
